--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -120,7 +120,7 @@
     &__title-group {
       font-size: 48.5px;
       padding-top: 81px;
-      height: 200px;
+      height: 202px;
     }
 
     &__title {
@@ -157,8 +157,15 @@
       padding: 0;
       width: 100%;
       height: 250px;
+    }
+    &--1:after {
       background: url(../img/iphone-screen-mobile@1x.png) no-repeat 50% -10%;
-
+    }
+    &--2:after {
+      background: url(../img/iphone-screen-mobile@1x.png) no-repeat 50% -10%;
+    }
+    &--3:after {
+      background: url(../img/iphone-screen-mobile@1x.png) no-repeat 50% -10%;
     }
    }
   }
