--- a/sass/blocks/make-post.scss
+++ b/sass/blocks/make-post.scss
@@ -1,36 +1,99 @@
 .make-post {
+  background-color: #f2f2f2;
   &__wrapper {
     @include container();
-    height: 757px;
-    background-color: rgba(0,255,0,0.5);
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
   }
   &__photo {
-    float: left;
+    padding: 20px;
+  }
+  &__controls {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   &__slider {
-
+    width: 80%;
+    height: 2px;
+    background: #000;
+    &--inner {
+      display: none;
+    }
   }
   &__slider-control {
-    width: 20px;
-    height: 20px;
-    background: url(../img/icon-editor-diagram-fill.svg) no-repeat center;
-    background-size: 100%;
+    width: 10px;
+    height: 10px;
+    border: 2px solid #d22856;
+    margin-top: -5px;
+    border-radius: 50%;
+    background: #f2f2f2;
   }
+
 
   &__tools {
     list-style: none;
-    float: right;
+    padding: 0;
+    margin-bottom: 20px;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+
   }
 
   &__tool {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+  }
+
+  &__buttons {
+    margin-top: 20px;
+    border-top: 1px solid #e5e5e5;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 @media (min-width: 768px) {
   .make-post {
     &__wrapper {
+      padding: 40px 0px;
       height: 511px;
+      flex-direction: row;
+    }
+
+    &__tools  {
+      flex-direction: column;
+      align-items: center;
+      height: 300px;
+    }
+
+    &__tool {
+      border-bottom: 1px solid #e5e5e5;
+      width: 280px;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+
+      img {
+        width: 27px;
+      }
+    }
+
+    &__slider {
+      &--inner {
+        display: block;
+        margin-left: 30px;
+      }
+      &--outer {
+        display: none;
+      }
+    }
+
+    &__buttons {
+      border: none;
     }
   }
 
@@ -40,6 +103,20 @@
   .make-post {
     &__wrapper {
       height: 514px;
+    }
+    &__buttons {
+      flex-direction: row;
+      align-items: flex-end;
+      
+      width: 100%;
+      height: 200px;
+    }
+    &__controls {
+      flex-grow: 1;
+     
+    }
+    &__tool {
+      width: 100%;
     }
   }
 
