--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -29,11 +29,15 @@
     display: inline-block;
     width: 10px;
     height: 10px;
-    background-color: #f4f4f4;
+    background-color: #bec2c7;
     border-radius: 50%;
     cursor: pointer;
     &--active {
-      background-color: steelblue;
+      height: 7px;
+      width: 7px;
+      border: 3px solid #283645;
+      background-color: #f2f2f2;
+
     }
   }
 }
