--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -79,7 +79,7 @@
 
     &__table {
       width: 620px;
-      left: 0 !important;
+      left: 0;
       td:first-child {
         display: table-cell;
         width: 27%;
